# Generic_Database_Agent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.postgres  README.md  app.py  azure-pipelines.yml  debug.py  docker-compose.yml  explore_faker.py  explore_faker_simple.py  main.py  pyproject.toml  requirements.txt  run_demo.py  start.sh
.streamlit/: config.toml
components/: __init__.py  auth.py  chat.py  sidebar.py  styling.py
config/: schemas.py  settings.py
core/: __init__.py  agent.py  graph_builder.py  router.py  state.py  tool_nodes.py
data/: users.json
data/csv/: conseillers.csv  demandes.csv  incidents_techniques.csv  maisons_france_services.csv  plannings.csv  services_details.csv  statistiques_mensuelles.csv  temps_attente.csv  usagers.csv
database/: __init__.py  connection.py  csv_manager.py  initialize_database.py
docs/: postgresql_macos_guide.md
init-scripts/: init.sql
integration/: __init__.py  agent_bridge.py
llm/: custom_gpt.py  global_token_tracker.py
scripts/: connection.py  db_manager.py  demo.py  generate_csv_data.py  generate_data.py  init_db.py  init_postgres.py  init_postgres_mac.sh
src/: data_generator.py
src/database/: connection.py  data_generator.py  loader.py
tools/: csv_export_tool.py  modern_visualization_tool.py  query_execution_tool.py  response_formatter_tool.py  smart_intent_analyzer_tool.py  smart_schema_tool.py  smart_sql_generator_tool.py
users_data/: chat_sessions.json  users.json
